Fixed colour contrast warning on the asterisks.

--- a/src/style-layers/_controls.css
+++ b/src/style-layers/_controls.css
@@ -14,7 +14,7 @@
         --grey-color-light: hsl(0, 0%, 25%);
         --grey-color-dark: hsl(0, 0%, 20%);
         --outline-color: hsl(0, 0%, 70%);
-        --validation-color: hsl(0, 75%, 50%);
+        --validation-color: hsl(0, 90%, 65%);
     }
 }
 
